<resources>
    <string name="app_name">ProjecteAndroid</string>
    <string name="name_hint">Nom</string>
    <string name="phone_hint">Telèfon</string>
    <string name="email_hint">Email</string>
    <string name="save_button_text">Guardar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="afegir_contacte">Afegir contacte</string>
    <string name="mirar_contactes">Mirar contactes</string>
    <string name="info_creador">Informació del creador</string>
    <string name="creador_titol">Sobre el creador</string>
    <string name="creador_missatge">Aquesta aplicació ha estat desenvolupada per Mihai Sebastian Burghelea.</string>
    <string name="agregar_contacto">Afegir contacte</string>
    <string name="nom">Nom</string>
    <string name="telefon">Telèfon</string>
    <string name="correu_electronic">Correu electrònic</string>
    <string name="guardar">Guardar</string>
    <string name="contact_list">Llista de contactes</string>
    <string name="guardar_canvis">Desar canvis</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="tornar_enrere">Tornar enrere</string>
</resources>